# Analytics

./: TX1ProcessFlow.xml  install.txt  readme.md  readme.txt
example/: CMakeLists.txt
example/include/: .VAGetStream.h.swp  VAGetStream.h  VideoAnalyticsApi.hpp  aType.h
example/lib/: libcaffe.so.1.0.0-rc3
example/source/: parameter.txt
example/src/: .VAGetStream.cpp.swp  VAGetStream.cpp  main.cpp
model/: smoke_iter_260000.prototxt
model/MTmodel/: det1.prototxt  det2_input.prototxt  det3_input.prototxt
